implemented change password

--- a/templates/admin/reset_password.html
+++ b/templates/admin/reset_password.html
@@ -1,40 +1,73 @@
-{%extends 'base.html' %}
+{% extends 'base.html' %}
 
-{%block title%}
+{% block title %}
 Reset Password
 {% endblock %}
 
-{% block header%}
+{% block header %}
 Reset Password
-{% endblock  %}
+{% endblock %}
 
-{% block anchor%}
+{% block anchor %}
 <a href="{{ url_for('dashboard') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
-{% endblock  %}
+{% endblock %}
 
-{%block content%}
+
+{% block content %}
+<style>
+
+    .button {
+        background-color: #007BFF;
+        color: #ffffff;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    .button:hover {
+        background-color: #0056b3;
+    }
+
+    .button a {
+        text-decoration: none;
+        color: inherit;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+    }
+</style>
 <body id="form">
     <div class="full-form-content">
 
         <div class="form-wrapper" id="long-form">
-            <form  method="post">
+            <form method="post">
 
                 {{ form.hidden_tag() }}
                 <h1>Reset Password</h1>
-                
+
                 <div class="form-label">
-                {{ form.person.label(class_='input-label') }} <br></div>
-                
+                    {{ form.person.label(class_='input-label') }} <br>
+                </div>
+
                 <div class="form-box">
-                {{ form.person(class_="input")}}
-                <br></div>
+                    {{ form.person(class_="input") }}
+                    <br>
+                </div>
 
                 <div class="button-wrapper">
-                {{ form.submit(class="button") }}
+                    {{ form.submit(class="button") }}
                 </div>
 
             </form>
         </div>
+        
+    </div>
+    <div class="centered-button">
+        <button class='button'><a href="{{ url_for('change_password') }}">Change my Password</a></button>
     </div>
 </body>
-{%endblock%}
+{% endblock %}
