--- a/templates/forms/change_password.html
+++ b/templates/forms/change_password.html
@@ -1,48 +1,56 @@
-{% extends "base.html" %}
-
-{% block content %}
-  <h2>Reset Password</h2>
-  <div class="full-form-content">
-
-    <div class = "flash-messages">
-      {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-          <ul class="flash-messages">
-              {% for message in messages %}
-                  <li class="fade-out {{message[0]}}">{{message[1]}}</li>
-              {% endfor %}
-          </ul>
-      {% endif %}
-      {% endwith %}
-      </div>
-      
+{% extends "base.html" %} {% block content %}
+<body id = "form">
+<h2>Reset Password</h2>
+<div class="full-form-content">
+  <div class="flash-messages">
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+    messages %}
+    <ul class="flash-messages">
+      {% for message in messages %}
+      <li class="fade-out {{message[0]}}">{{message[1]}}</li>
+      {% endfor %}
+    </ul>
+    {% endif %} {% endwith %}
+  </div>
+<div class="form-wrapper">
   <form method="POST">
     {{ form.hidden_tag() }}
 
     <h1>Reset Password</h1>
 
-    <div class="form-group">
-      {{ form.current_password.label }}
-      {{ form.current_password() }}
-      {% for error in form.current_password.errors %}
-        <span class="error">{{ error }}</span>
-      {% endfor %}
+    <div class="form-label">
+      {{ form.current_password.label(class_='input-label') }}
     </div>
-    <div class="form-group">
-      {{ form.new_password.label }}
-      {{ form.new_password() }}
-      {% for error in form.new_password.errors %}
-        <span class="error">{{ error }}</span>
-      {% endfor %}
+      
+      <div class="form-box">
+        {{ form.current_password(class_="input") }}
+        <br />
+      </div>
+ 
+  
+    <div class="form-label">
+      {{ form.new_password.label(class_='input-label') }} 
+      
     </div>
-    <div class="form-group">
-      {{ form.confirm_new_password.label }}
-      {{ form.confirm_new_password() }}
-      {% for error in form.confirm_new_password.errors %}
-        <span class="error">{{ error }}</span>
-      {% endfor %}
+      
+    <div class="form-box">
+      {{ form.new_password(class_="input") }} 
+
     </div>
-    <button type="submit">Change Password</button>
+    <div class="form-label">
+      {{ form.confirm_new_password.label(class_='input-label') }}
+
+    </div>
+      
+    <div class="form-box">
+      
+      {{ form.confirm_new_password(class_="input") }}
+    </div>
+    <div class="button-wrapper">
+      <input type="submit" value="Change" class="button" />
+    </div>
   </form>
 </div>
+</div>
+</body>
 {% endblock %}
