--- a/templates/admin/reset_password.html
+++ b/templates/admin/reset_password.html
@@ -16,7 +16,7 @@ Reset Password
 {% block content %}
 <style>
 
-    .button {
+    .mybutton {
         background-color: #007BFF;
         color: #ffffff;
         padding: 10px 20px;
@@ -67,7 +67,7 @@ Reset Password
         
     </div>
     <div class="centered-button">
-        <button class='button'><a href="{{ url_for('change_password') }}">Change my Password</a></button>
+        <button class='mybutton'><a href="{{ url_for('change_password') }}">Change my Password</a></button>
     </div>
 </body>
 {% endblock %}
