fixed upload for savings and loan

--- a/templates/forms/upload.html
+++ b/templates/forms/upload.html
@@ -59,11 +59,11 @@
                 <br></div>
 
                 <div class="form-label">
-                    {{ form.bank.label(class_='input-label') }} <br>
+                    {{ form.ref_no.label(class_='input-label') }} <br>
                 </div>
 
                 <div class="form-box">
-                {{ form.bank(class_="input") }}
+                {{ form.ref_no(class_="input") }}
                 <br></div>
 
                 <div class="form-label">
