--- a/templates/forms/register_loan.html
+++ b/templates/forms/register_loan.html
@@ -1,22 +1,22 @@
-{%extends 'base.html' %}
+{% extends 'base.html' %}
 
-{%block title%}
+{% block title %}
 Register for Loan
 {% endblock %}
 
-{% block header%}
+{% block header %}
 Register for Loan
-{% endblock  %}
+{% endblock %}
 
-{% block anchor%}
+{% block anchor %}
 <a href="{{ url_for('forms') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
-{% endblock  %}
+{% endblock %}
 
-{%block content%}
+{% block content %}
 <body id="form">
   
   <div class="full-form-content">
-    <div class = "flash-messages">
+    <div class="flash-messages">
       {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
           <ul class="flash-messages">
@@ -26,68 +26,172 @@ Register for Loan
           </ul>
       {% endif %}
       {% endwith %}
-      </div>
+    </div>
 
-  <div class="form-wrapper" id="long-form">
+    <div class="form-wrapper" id="long-form">
       <form method="POST">
           {{ form.hidden_tag() }}
-
 
           <h1>Register for Loan</h1>
 
           <div class="form-label">
-          {{ form.name.label(class_='input-label') }} <br>
+              {{ form.name.label(class_='input-label') }} <br>
           </div>
 
           <div class="form-box">
-          {{ form.name(class_="input") }}
-          <br></div>
+              {{ form.name(class_="input") }}
+              <br>
+          </div>
 
           <div class="form-label">
-          {{ form.ref_no.label(class_='input-label') }} <br>
+              {{ form.amount.label(class_='input-label') }} <br>
           </div>
-          
+
           <div class="form-box">
-          {{ form.ref_no(class_="input") }}
-          <br></div>
+              {{ form.amount(class_="input", id="amount") }}
+              <br>
+          </div>
+
+          <div class="form-label" id="no_of_guarantors_label" style="display: none;">
+              {{ form.no_of_guarantors.label(class_='input-label') }} <br>
+          </div>
+
+          <div class="form-box" id="no_of_guarantors_box" style="display: none;">
+              {{ form.no_of_guarantors(class_="input", id="no_of_guarantors") }}
+              <br>
+          </div>
+
+          <div class="form-label" id='guarantor-label'>
+              {{ form.guarantor.label(class_='input-label') }} <br>
+          </div>
+
+          <div class="form-box" id ='guarantor-box'>
+              {{ form.guarantor(class_="input") }}
+              <br>
+          </div>
+
+          <div class="form-label" id = 'guarantor-2-label'>
+              {{ form.guarantor_2.label(class_='input-label') }} <br>
+          </div>
+
+          <div class="form-box" id = 'guarantor-2-box'>
+              {{ form.guarantor_2(class_="input") }}
+              <br>
+          </div>
 
           <div class="form-label">
-          {{ form.bank.label (class_='input-label')}} <br>
+              {{ form.ref_no.label(class_='input-label') }} <br>
           </div>
-          
+
           <div class="form-box">
-          {{ form.bank(class_="input") }}
-          <br></div>
+              {{ form.ref_no(class_="input") }}
+              <br>
+          </div>
 
           <div class="form-label">
-          {{ form.amount.label (class_='input-label')}} <br>
+              {{ form.bank.label (class_='input-label')}} <br>
           </div>
-            
+
           <div class="form-box">
-          {{ form.amount(class_="input") }}
-          <br></div>
+              {{ form.bank(class_="input") }}
+              <br>
+          </div>
 
           <div class="form-label">
-          {{ form.date.label (class_='input-label')}} <br>
+              {{ form.fee.label (class_='input-label')}} <br>
           </div>
 
           <div class="form-box">
-          {{ form.date(class_="input") }}
-          <br></div>
+              {{ form.fee(class_="input") }}
+              <br>
+          </div>
 
           <div class="form-label">
-          {{ form.description.label (class_='input-label')}} <br>
+              {{ form.date.label (class_='input-label')}} <br>
           </div>
 
           <div class="form-box">
-          {{ form.description(class_="input") }}
-          <br></div>
+              {{ form.date(class_="input") }}
+              <br>
+          </div>
+
+          <div class="form-label">
+              {{ form.description.label (class_='input-label')}} <br>
+          </div>
+
+          <div class="form-box">
+              {{ form.description(class_="input") }}
+              <br>
+          </div>
 
           <div class="button-wrapper">
-          <input type="submit" value="Submit"class="button"></div>
+              <input type="submit" value="Submit" class="button">
+          </div>
       </form>
     </div>
-    </div>
-  </body>
+  </div>
+  
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+      $(document).ready(function () {
+          // Function to show/hide the "No of Guarantors" field based on total balance.
+          function toggleNoOfGuarantorsField(totalBalance) {
+              var amount = parseFloat($("#amount").val());
 
-  {%endblock%}
+              if (amount > totalBalance) {
+                  $("#no_of_guarantors_label").show();
+                  $("#no_of_guarantors_box").show();
+              } else {
+                  $("#no_of_guarantors_label").hide();
+                  $("#no_of_guarantors_box").hide();
+              }
+          }
+
+          // Function to show/hide guarantor fields based on the number of guarantors selected.
+          function toggleGuarantorFields() {
+              var numGuarantors = parseInt($("#no_of_guarantors").val());
+
+              if (numGuarantors === 1) {
+                  $("#guarantor-label").show();
+                  $("#guarantor-box").show();
+                  $("#guarantor-2-label").hide();
+                  $("#guarantor-2-box").hide();
+              } else if (numGuarantors === 2) {
+                  $("#guarantor-label").show();
+                  $("#guarantor-box").show();
+                  $("#guarantor-2-label").show();
+                  $("#guarantor-2-box").show();
+              } else {
+                  $("#guarantor-label").hide();
+                  $("#guarantor-box").hide();
+                  $("#guarantor-2-label").hide();
+                  $("#guarantor-2-box").hide();
+              }
+          }
+
+          // Listen for changes in the amount field.
+          $("#amount").on("input", function () {
+              var amount = parseFloat($(this).val());
+              var personId = $("#name").val(); // Assuming you have a "name" field in your form.
+
+              // Make an AJAX request to your endpoint to get the total balance.
+              $.get("/get_person_info/" + personId, function (data) {
+                  var totalBalance = parseFloat(data.total_balance);
+
+                  toggleNoOfGuarantorsField(totalBalance);
+                  toggleGuarantorFields();
+              });
+          });
+
+          // Listen for changes in the "No of Guarantors" field.
+          $("#no_of_guarantors").on("change", function () {
+              toggleGuarantorFields();
+          });
+
+          // Initial toggle based on the default values of the amount and "No of Guarantors" fields.
+          toggleGuarantorFields();
+          toggleNoOfGuarantorsField(); // Initialize with a default total balance of 0.
+      });
+  </script>
+</body>
+{% endblock %}
