started loan guarators

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -156,7 +156,7 @@
             <div class="card" id="consent">
                 <div class="container">
                     <div class='content-con'>
-                    <a href="{{url_for('consent',person_id=person.id)}}">
+                    <a href="">
                         
                         <div>
                         <p><strong>Consent:</strong></p>
@@ -169,7 +169,7 @@
                     </a>
                     </div>
                     <div class='content-con'>
-                        <a href="{{url_for('consent',person_id=person.id)}}">
+                        <a href="">
                             <div>
                             <p><strong>View Consent</strong></p>
                             </div>
