Front-end basic structure done(fine-tuning required)
changed total balance to available balnce

Consent shows on dashboard but not working as expected

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -169,7 +169,7 @@
                     </a>
                     </div>
                     <div class='content-con'>
-                        <a href="">
+                        <a href="{{url_for('give_consent',loan_id=consent.id)}}">
                             <div>
                             <p><strong>View Consent</strong></p>
                             </div>
