--- a/templates/forms/person_form.html
+++ b/templates/forms/person_form.html
@@ -64,11 +64,11 @@ Create Person
             </div>
 
             <div class="form-label">
-                {{ form.total_balance.label(class_='input-label') }} <br>
+                {{ form.available_balance.label(class_='input-label') }} <br>
             </div>
 
             <div class="form-box">
-                {{ form.total_balance(class_="input") }}
+                {{ form.available_balance(class_="input") }}
             </div>
 
             <div class="form-label">
