--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -183,6 +183,37 @@
 
         </div>
         {% endfor %}
+        {% if failed_loan %}
+        <div class="card" id="consent">
+            <div class="container">
+                <div class='content-con'>
+                <a href="">
+                    
+                    <div>
+                    <p><strong>Consent:</strong></p>
+                    </div>
+
+                    <div>
+                    <p><strong>Your loan application for {{ failed_loan.amount | currency }} has failed </strong></p>
+                    </div>
+                
+                </a>
+                </div>
+                <div class='content-con'>
+                    <a href="{{url_for('update_loan',loan_id=failed_loan.id)}}">
+                        <div>
+                        <p><strong>View Consent</strong></p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="icon-con" id='landmark'><i class="fa-solid fa-landmark"></i></div>
+
+            </div>
+    </div>
+    {% endif %}
+
+    </div>
 
         </div>
     </div>
