--- a/templates/admin/approval.html
+++ b/templates/admin/approval.html
@@ -6,9 +6,10 @@
 
 {% block content %}
     <div class="loan-approval-list">
+        {% if loans %}
         <h2>Loans to Approve</h2>
         {% for loan in loans %}
-            {% if not loan.is_approved %}
+            {% if loan.is_approved %}
                 <div class="loan-approval-item">
                     <p class="loan-id">Loan ID: {{ loan.id }}</p>
                     <a href="{{ url_for('savings_account', person_id=loan.person.id) }}" class="loan-recipient" style="color: #007bff;"><strong>Loan Recipient:</strong> {{ loan.person.name }}</a>
@@ -17,9 +18,13 @@
                     <p class="loan-term">Loan Duration: {{ loan.start_date | calculate_duration(loan.end_date) }}</p>
                     <p class="loan-interest">Loan Interest Rate: {{ loan.interest_rate }}%</p>
                     <a href="{{ url_for('approve_loan', loan_id=loan.id) }}" class="approve-button">Approve</a>
+                    <a href="{{ url_for('reject_loan', loan_id=loan.id) }}" class="reject-button">Reject</a>
                 </div>
             {% endif %}
         {% endfor %}
+        {% endif %}
+
+        {% if withdrawals %}
         <h2>Withdrawals to approve</h2>
         {% for withdrawal in withdrawals %}
             {% if not withdrawal.is_approved %}
@@ -28,8 +33,13 @@
                     <a href="{{ url_for('savings_account', person_id=withdrawal.person.id) }}" class="loan-recipient" style="color: #007bff;"><strong>Withdrawal Recipient:</strong> {{ withdrawal.person.name }}</a>
                     <p class="loan-amount">Withdrawal Amount: {{ withdrawal.amount }}</p>
                     <a href="{{ url_for('approve_withdrawal', request_id=withdrawal.id) }}" class="approve-button">Approve</a>
+                    <a href="{{ url_for('reject_withdrawal', request_id=withdrawal.id) }}" class="reject-button">Reject</a>
                 </div>
             {% endif %}
+            
+
+
         {% endfor %}
+        {% endif %}
     </div>
 {% endblock content %}
