loan works well with one guarantor.
yet to test 2 guarantor

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -194,7 +194,7 @@
                     </div>
 
                     <div>
-                    <p><strong>Your loan application for {{ failed_loan.amount | currency }} has failed </strong></p>
+                    <p><strong>Your loan application for {{ failed_loan.loan_amount | currency }} has failed </strong></p>
                     </div>
                 
                 </a>
