--- a/templates/forms.html
+++ b/templates/forms.html
@@ -97,5 +97,12 @@ active
             </div>
         </div>
 
+        <div class="card">
+
+            <div class="container">
+                <a href="{{ url_for('journal') }}">Journal</a>
+            </div>
+        </div>
+
 </section>
 {%endblock%}
