--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -125,6 +125,12 @@
                             <p><strong>{{ person.total_balance | currency}}</strong></p>
                             </div>
                         </a>
+
+                        <a href="{{url_for('request_withdrawal')}}">
+                            <div>
+                            <p><strong>Withdrawal</strong></p>
+                            </div>
+                        </a>
                     </div>
 
                 </div> <!--container new-->
